# 202512-26

./: App.tsx  MODEL_IMPLEMENTATION.md  README.md  REPORT_SECTIONS.md  index.css  index.html  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  types.ts  vite.config.ts
components/: AnalysisPanel.tsx  CorrelationChart.tsx  StockChart.tsx
data/: AAPL.csv  AAPL_GNews_2023_2024_with_sentiment.csv  AMZN.csv  AMZN_GNews_2023_2024_with_sentiment.csv  GOOGL.csv  GOOGL_GNews_2023_2024_with_sentiment.csv  META.csv  META_GNews_2023_2024_with_sentiment.csv  MSFT.csv  MSFT_GNews_2023_2024_with_sentiment.csv
datacollection/: DataCollectionCode.ipynb
output/: AAPL_advanced_metrics.csv  AAPL_advanced_predictions.csv  AAPL_base_metrics.csv  AAPL_base_predictions.csv  AAPL_finbert.csv  AMZN_advanced_metrics.csv  AMZN_advanced_predictions.csv  AMZN_base_metrics.csv  AMZN_base_predictions.csv  AMZN_finbert.csv  GOOGL_advanced_metrics.csv  GOOGL_advanced_predictions.csv  GOOGL_base_metrics.csv  GOOGL_base_predictions.csv  GOOGL_finbert.csv  META_advanced_metrics.csv  META_advanced_predictions.csv  META_base_metrics.csv  META_base_predictions.csv  META_finbert.csv  MSFT_advanced_metrics.csv  MSFT_advanced_predictions.csv  MSFT_base_metrics.csv  MSFT_base_predictions.csv  MSFT_finbert.csv  advanced_model_summary.csv  base_model_summary.csv  sentiment_analysis.csv
scripts/: advanced_model.py  base_model.py  data_acquisition.py  generate_finbert_sentiment.py  sentiment_analysis.py
services/: mockDataService.ts
(+1 files in other folders)
