[project]
name = "finsent-market-correlation-analyzer"
version = "0.1.0"
description = "Market correlation analyzer using univariate and multivariate LSTM models"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.20.0",
]
